--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,15 @@
 
 # misc
 */.DS_Store
+*/.env
 */.env.local
 */.env.development.local
 */.env.test.local
 */.env.production.local
+
+# prisma
+*/prisma/dev.db
+*/prisma/dev.db-journal
 
 */npm-debug.log*
 */yarn-debug.log*
