--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.16.1",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "joi": "^17.13.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
