--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@prisma/client": "^5.16.1",
     "express": "^4.19.2",
-    "joi": "^17.13.3"
+    "joi": "^17.13.3",
+    "cors": "^2.8.5",
+    "express-async-errors": "^3.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
